--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, intitial-scale=1">
     <link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="vendors/css/jquery.bxslider.css">
+    <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="vendors/css/normalize.css">
     <link rel="stylesheet" href="css/layout.css">
     <link rel="stylesheet" href="css/base.css">
@@ -37,7 +38,7 @@
 
   <body>
     <header class="site-header">
-      <h1>
+      <h1 class="animate">
         Marshall's Portfolio
       </h1>
     </header>
